# netcat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  test.sh
src/: iopoll.rs  main.rs  util.rs
tests/: README.md  nc-test.py
