[package]
name = "netcat-rs"
version = "0.1.0"
keywords = ["network"]
categories = ["command-line-utilities", "network"]
edition = "2021"
rust-version = "1.74.1"

[features]
default = []
debugtrace = []

[[bin]]
name = "nc"
path = "src/main.rs"

[dependencies]
libc = "0.2.155"
clap = { version = "4.4.18", features = ["derive"] }
